--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,12 @@ a {
   cursor: pointer;
   color: white;
 }
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
 /* Estilização da página */
 body {
   font-family: "Trebuchet MS", Helvetica, Arial, sans-serif;
@@ -137,6 +143,31 @@ main h2 {
 .conteudo {
   margin: 10px;
   color: #fff;
+}
+
+#portfolio .conteudo {
+  position: relative;
+  overflow: hidden;
+}
+
+.slide {
+  display: flex;
+}
+
+.slide:hover {
+  will-change: transform;
+}
+
+.slide li {
+  flex-shrink: 0;
+  width: 80vw;
+  max-width: 800px;
+  margin: 0 20px;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, .4);
+  opacity: .8;
+  transform: scale(.8);
+  transition: .4s;
 }
 
 section.ativo {
