--- a/css/style.css
+++ b/css/style.css
@@ -152,22 +152,49 @@ main h2 {
 
 .slide {
   display: flex;
+  transition: .3s;
 }
 
 .slide:hover {
-  will-change: transform;
+  /* will-change: transform; */
 }
 
 .slide li {
   flex-shrink: 0;
   width: 80vw;
-  max-width: 800px;
-  margin: 0 20px;
+  max-width: 700px;
+  margin: 0 5px;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, .4);
   opacity: .8;
   transform: scale(.8);
   transition: .4s;
+}
+
+.slide li.ativo {
+  opacity: 1;
+  transform: scale(1);
+}
+
+[data-control="slide"] {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+[data-control="slide"] li a {
+  display: block;
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  overflow: hidden;
+  background-color: #2b2b2b;
+  margin: 5px;
+  text-indent: -99999px;
+}
+
+[data-control="slide"] li.ativo, [data-control="slide"] li a:hover {
+  background-color: #fc0;
 }
 
 section.ativo {
