--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,10 @@ main h2 {
 
 .slide li {
   flex-shrink: 0;
+  display: flex;
+  background: #2b2b2b;
   width: 80vw;
+  height: 400px;
   max-width: 700px;
   margin: 0 5px;
   border-radius: 4px;
@@ -169,6 +172,8 @@ main h2 {
   opacity: .8;
   transform: scale(.8);
   transition: .4s;
+  align-items: center;
+  justify-content: center;
 }
 
 .slide li.ativo {
